# Dr.QP

./: .actrc  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .readthedocs.yaml  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Dr.QP.code-workspace  Dr.Qp.ws.code-workspace  LICENSE  Notes.md  PR_264_DESCRIPTION.md  README.md  SKILL_VALIDATION_SUMMARY.md  TEST_SUITE_SUMMARY.md  codecov.yml  conanfile.txt  environment-readthedocs.yml  environment-ros-jazzy.yml  environment.yml  migration_summary.md  migration_summary_2_affine_transforms.md  migration_summary_all.md  migration_summary_all_notebooks.md  pyproject.toml  requirements.txt  ruff.toml  update.sh  zizmor.yml
.claude/: README.md  settings.json  settings.local.json
.codex/: README.md  setup-codex-cloud.sh
.cursor/: README.md  rules
.devcontainer/: Dockerfile  devcontainer-init.sh  devcontainer-lock.json  devcontainer.json  docker-compose.yml  firewall-allowlist.txt
.github/: README.md  agent-skills.instructions.md  copilot-instructions.md  dependabot.yml  pull_request_template.md  super-linter-autofix.env  super-linter-checks.env
UnixHAL/: CMakeLists.txt  UnixSerial.cpp  UnixSerial.h
ansible/: README.md  ansible-virtual.cfg  ansible.cfg  inventory.yml  ros_setup.yml  setup-ros.sh
docker/: docker-compose.yml  micromamba-ubuntu.dockerfile  ros-base.dockerfile  ros-desktop.dockerfile  ser2net.conf  ser2net.dockerfile  ser2net.yml
docs/: .readthedocs.yaml  ansible.md  readme.md  requirements.txt
git/: install-hooks.sh
hardware/: Articulated-Arm.3mf  LCD_Touchscreen_Frame.3mf  README.md  config-ubuntu.txt  config.txt
launch/: package.xml
notebooks/: .gitignore  1_getting_started_with_robot_ik.i.ipynb  1_getting_started_with_robot_ik.i.py  1_getting_started_with_robot_ik.ipynb  1_getting_started_with_robot_ik.md  2_affine_transforms.i.ipynb  2_affine_transforms.i.py  2_affine_transforms.ipynb  2_affine_transforms.md  3_1_appendix_smoothing_splines.i.ipynb  3_1_appendix_smoothing_splines.i.py  3_1_appendix_smoothing_splines.ipynb  3_1_appendix_smoothing_splines.md  3_1_appendix_smoothing_splines.myst  3_generating_gaits.i.ipynb  3_generating_gaits.i.py  3_generating_gaits.ipynb  3_generating_gaits.md  _appendix_collab.md  gait_generators.py  getting_started_with_robot_ik.ipynb  joint_state_publisher.py  jupyter_utils.py  jupytext.toml  models.py  parametric_gait_generator.py  plotting.py  point.py  ps5_controller.py  requirements.txt  ruff.toml  run_hexapod.py  run_hexapod_ros.py  scipy_based_transforms.ipynb  smoothing_splines.py  test_gait_visualization.py  transforms.py  walk_controller.py
purecpp/: CMakeLists.txt  LICENSE.md
purecpp/src/: DrQp.h
purecpp/src/examples/read-everything/: CMakeLists.txt
purecpp/src/servo/include/servo/: UnixSerial.h
purecpp/src/servo/src/: UnixSerial.cpp
purecpp/tests/: CMakeLists.txt  SerialDecorator.h  SerialPlayer.cpp  SerialRecordingProxy.cpp
py_packages/drqp_robot_mcp/: README.md  pyproject.toml
py_packages/drqp_robot_mcp/drqp_robot_mcp/: __init__.py  container_cli.py  controller.py  models.py  runtime.py  server.py
py_packages/drqp_robot_mcp/tests/: test_container_cli.py  test_controller.py  test_runtime.py  test_server.py  test_walk_integration.py
py_packages/sphinxcontrib_glightbox/: README.md  THIRD_PARTY_LICENSES.md  pyproject.toml
py_packages/sphinxcontrib_glightbox/sphinxcontrib/glightbox/: __init__.py
py_packages/validate_agents/: README.md  pyproject.toml
py_packages/validate_agents/tests/: test_cli.py
py_packages/validate_agents/tests/validate_customizations/: test_agent_validation.py  test_entrypoints.py  test_prompt_validation.py  test_skill_validation.py
py_packages/validate_agents/tests/validate_skills/: README.md  conftest.py  test_cli.py  test_core.py  test_edge_cases.py  test_formatters.py  test_loaders.py  test_main.py  test_validators.py
py_packages/validate_agents/validate_agents/: __init__.py  cli.py  formatters.py  loaders.py  main.py
py_packages/validate_agents/validate_agents/validate_customizations/: __init__.py  __main__.py  cli.py  core.py  loaders.py  main.py
py_packages/validate_agents/validate_agents/validate_customizations/validators/: __init__.py  agents.py  prompts.py
py_packages/validate_agents/validate_agents/validate_skills/: __init__.py  __main__.py  cli.py  core.py  formatters.py  loaders.py  main.py  types.py
py_packages/validate_agents/validate_agents/validate_skills/validators/: __init__.py  cross_reference.py  skill.py  uniqueness.py
py_packages/validate_agents/validate_agents/validators/: __init__.py  agents.py
ros/: Install-ros.md  ros.fish
scripts/: __utils.sh  backup-pi.sh  backup-ubuntu.sh  bno.py  bootstrap-local-machine.sh  bt_pair.bash  bt_pair.expect  bt_pair_by_mac.expect  bt_pair_by_name.expect  build.dockerfile  clean.fish  cpp-reformat.sh  devcontainer-firewall.sh  devcontainer-install-firewall.sh  gcov  (+30 more)
src-nonros/servo/: CMakeLists.txt
src-nonros/servo/src/: UnixSerial.cpp
src/Servo/: CMakeLists.txt  Relax.cpp  TcpSerial.cpp  TcpSerial.h  UnixSerial.cpp  UnixSerial.h  XYZrobotServo.cpp
src/Servo/include/servo/: TcpSerial.h  UnixSerial.h
src/Servo/src/: TcpSerial.cpp
src/drqp_description/: CMakeLists.txt  package.xml
src/drqp_description/launch/: display.launch.py  drqp_description.launch  rsp.launch.py
src/drqp_description/meshes/: F1.stl  F3.stl  Tibia.stl  body-simple.stl  body.stl
src/drqp_description/rviz/: drqp_description.rviz
src/drqp_description/urdf/: body.urdf.xacro  dr_qp.urdf.xacro  dr_qp.xacro  gazebo.xacro  leg.urdf.xacro  phantomx-mk3-oss.urdf.xacro
src/drqp_gazebo/: CMakeLists.txt  LICENSE  package.xml
src/drqp_gazebo/config/: gazebo_params.yaml
src/drqp_gazebo/launch/: sim.launch.py
tests/: BoostTestHelpers.cmake  CMakeLists.txt  RecordingProxy.cpp  RecordingProxy.h  SerialDecorator.cpp  SerialDecorator.h  SerialPlayer.cpp  SerialPlayer.h  SerialRecordingProxy.cpp  SerialRecordingProxy.h  TestSerialRecordingProxy.cpp  TestsMain.cpp
(+667 files in other folders)
