[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drqp_robot_mcp"
version = "0.0.0"
description = "Local MCP server for interacting with the Dr.QP Gazebo robot."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["mcp[cli]>=1.26.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
drqp_robot_mcp = "drqp_robot_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["drqp_robot_mcp*"]
exclude = ["tests*"]
