[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinxcontrib-glightbox"
version = "0.1.0"
description = "Sphinx extension for GLightbox - a better image lightbox with SVG support."
readme = "README.md"
license = {text = "MIT"}
license-files = ["THIRD_PARTY_LICENSES.md"]
requires-python = ">=3.10"
dependencies = [
    "sphinx>=5.0",
    "docutils",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sphinxcontrib*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"sphinxcontrib.glightbox" = ["_static/**/*"]
