[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "validate_agents"
version = "0.0.0"
description = "CLI tools for validating DRQP agents and their skills."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
validate_skills = "validate_agents.validate_skills.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["validate_agents*"]
exclude = ["tests*"]
